--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "psr/simple-cache": "2.0",
+        "shuchkin/simplexlsxgen": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
